--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Prostitution'
 - !lcc 'HQ'
+- GITenberg
 title: Histoire de la prostitution chez tous les peuples du monde depuis l'antiquité
   la plus reculée jusqu'à nos jours, tome 5/6
 url: http://www.gutenberg.org/ebooks/44285
